Fixed footer alignment

--- a/styles.css
+++ b/styles.css
@@ -244,7 +244,8 @@ small {
 
 
 .footer-col-1 {
-        flex-basis: 30%;
+        flex-basis: 25%;
+        
 }
 
 .footer-col-2 {
@@ -254,10 +255,16 @@ small {
 
 
 .footer-col-2 img {
-     width: 180px;
+     width: 165px;
      margin-bottom: 20px;
-     text-align: center;
 }
+
+
+.footer-col-3 ul { 
+    list-style-type: none;
+}
+
+
 
 .footer hr {
     color: #38B6FF;
